--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <h1 id="pageTitle">Text reuse in Nuwayrī's Nihāya for all books in the OpenITI corpus</h1>
   <!-- Create a div where the graph(s) will live -->
   <div id="legend"></div>
-  <div id="viz"></div>
+  <div id="viz"><span></span></div>
   <div id="viz2"></div>
   <!-- Create a div where the filters will live -->
   <div id="filters"></div>
@@ -62,10 +62,10 @@
 </body>
 
 <script>
+// set some global variables:
+const dataBasePath = "data/";
+const OpenITIVersion = "2021.2.5";
 
-const dataBasePath = "data/"
-
-let OpenITIVersion = "2021.2.5"
 /*//let mainVersionID = "Shamela0010283";  // Nuwayri
 let mainVersionID = "Shamela0011680";  // Istakhri
 // later, we'll get the mainVersionID and the OpenITIVersion from the URL:
@@ -79,6 +79,7 @@ function loadNuwayri(){
   document.getElementById("viz2").replaceChildren();
   document.getElementById("legend").replaceChildren();
   document.getElementById("filters").replaceChildren();
+  document.getElementById("stats-table-body").replaceChildren();
   // load new data:
   let mainVersionID = "Shamela0010283";  // Nuwayri
   main(dataBasePath, OpenITIVersion, mainVersionID);
@@ -89,6 +90,7 @@ function loadIstakhri(){
   document.getElementById("viz2").replaceChildren();
   document.getElementById("legend").replaceChildren();
   document.getElementById("filters").replaceChildren();
+  document.getElementById("stats-table-body").replaceChildren();
   // load new data:
   let mainVersionID = "Shamela0011680";  // Nuwayri
   main(dataBasePath, OpenITIVersion, mainVersionID);
