--- a/index.html
+++ b/index.html
@@ -43,8 +43,29 @@
   <h1 id="pageTitle">Text reuse in Nuwayrī's Nihāya for all books in the OpenITI corpus</h1>
   <!-- Create a div where the graph(s) will live -->
   <div id="legend"></div>
-  <div id="viz"><span></span></div>
+  <div id="viz">
+    <span></span>
+
+  </div>
+  <div class="diff-tooltip">
+    This is a placeholder for the diff viewer. <br/>
+    NB: the text is loaded from the text API (currently displaying the main text twice because only two texts are in the texts API for now).<br/>
+    Note that the offsets are not correct because the normalization algorithm used is not yet the same as the one used for passim.
+    <table>
+      <tr style="text-align: center;">
+        <th id="ms1-id"></td>
+        <th id="ms2-id"></td>
+      </tr>
+      <tr style="direction: rtl;">
+        <td id="ms1-text"></td>
+        <td id="ms2-text"></td>
+      </tr>
+    </table>
+    <div id="ms1-text"></div>
+    <div id="ms2-text"></div>
+  </div>  <div class="tooltip"></div>
   <div id="viz2"></div>
+  <p>NB: TO DO: make the lower graph filter, zoom and  pan together with the upper graph; and fix the pan and zoom bounds</p>
   <!-- Create a div where the filters will live -->
   <div id="filters"></div>
   <div id="stats-table-div">
@@ -63,7 +84,8 @@
 
 <script>
 // set some global variables:
-const dataBasePath = "data/";
+//const dataBasePath = "data/";
+const dataBasePath = "https://raw.githubusercontent.com/pverkind/one_to_all_reuse/v"
 const OpenITIVersion = "2021.2.5";
 
 /*//let mainVersionID = "Shamela0010283";  // Nuwayri
