Fix color picker layout

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
   
   <h1 id="pageTitle">Text reuse in Nuwayrī's Nihāya for all books in the OpenITI corpus</h1>
   <!-- Create a div where the graph(s) will live -->
-  <div id="legendContainer" style="display: flex">
-    <div id="legend" style="flex: 3"></div>
-    <div id="colorpicker" style="flex: 1">
-        <input type="radio" id="reds" name="color_radio" value="reds" checked>
-        <label for="reds">reds</label>
+  <div id="legendContainer">
+    <div id="legend" style="width: 50%; float: left; "></div>
+    <div id="colorpicker" style="float: left; padding-top: 30px;">
+        <input type="radio" id="heat" name="color_radio" value="heat" checked>
+        <label for="heat">heat</label>
         <input type="radio" id="blues" name="color_radio" value="blues">
         <label for="blues">blues</label>
     </div>
