--- a/index.html
+++ b/index.html
@@ -37,19 +37,28 @@
 
 <body>
   <div>
-    <button onclick="loadNuwayri()">Load Nuwayri</button>
+    <p>Load the visualisation by adding the version ID to the URL: e.g., ?id1=Shamela0011680</p>
+    <p>
+      Example texts: 
+      <a href="/?id1=Shamela0009783BK1&v=2022.2.7">Ṭabarī's Taʾrīkh</a>,
+      <a href="/?id1=Shamela0007798&v=2022.2.7">Ṭabarī's Tafsir</a>,
+      <a href="/?id1=JK008250Vols&v=2022.2.7">Ṭabarī's Tahdhīb</a>,
+      <a href="/?id1=Shamela0010283&v=2022.2.7">Nuwayrī's Nihāya</a>,
+      <a href="/?id1=Shamela0011680&v=2022.2.7">Iṣṭakhrī's Masālik</a>
+    </p>
+    <!--<button onclick="loadNuwayri()">Load Nuwayri</button>
     <button onclick="loadIstakhri()">Load Istakhri</button>
     <button onclick="loadTarikh()">Load Tarikh</button>
     <button onclick="loadTahdhib()">Load Tahdhib</button>
     <button onclick="loadTafsir()">Load Tafsir</button>
-    <span>NB: use query string to load another book (currently only Nuwayrī): http://127.0.0.1:60887?id1=Shamela0010283</span>
+    <span>NB: use query string to load another book (currently only Nuwayrī): http://127.0.0.1:60887?id1=Shamela0010283</span>-->
     <!--<form id="csvForm" method="post" enctype="multipart/form-data">
       <label for="file">Alternatively, choose CSV file to upload (does not work yet):</label>
       <input type="file" id="file" name="file" accept=".csv" />
       <button>Submit</button>
     </form>-->
-    <label for="file">Alternatively, choose CSV file to upload:</label>
-    <input type="file" id="file" name="file" onchange="loadCSV()" />
+    <!--<label for="file">Alternatively, choose CSV file to upload:</label>
+    <input type="file" id="file" name="file" onchange="loadCSV()" />-->
   </div>
   
   <h1 id="pageTitle">Text reuse in Nuwayrī's Nihāya for all books in the OpenITI corpus</h1>
@@ -113,24 +122,27 @@ function loadNuwayri(){
   resetGraph()
   // load new data:
   let mainVersionID = "Shamela0010283";  // Nuwayri
-  let OpenITIVersion = "2021.2.5"
-  main(dataBasePath, OpenITIVersion, mainVersionID);
+  let OpenITIVersion = "2022.2.7" //"2021.2.5"
+  //main(dataBasePath, OpenITIVersion, mainVersionID);
+  window.location.href = `/?id1=${mainVersionID}&v=${OpenITIVersion}`;
 }
 function loadIstakhri(){
   // remove earlier content:
   resetGraph()
   // load new data:
   let mainVersionID = "Shamela0011680";  // Istakhri
-  let OpenITIVersion = "2021.2.5"
-  main(dataBasePath, OpenITIVersion, mainVersionID);
+  let OpenITIVersion = "2022.2.7" //"2021.2.5"
+  //main(dataBasePath, OpenITIVersion, mainVersionID);
+  window.location.href = `/?id1=${mainVersionID}&v=${OpenITIVersion}`;
 }
 function loadTarikh(){
   // remove earlier content:
   resetGraph()
   // load new data:
   let mainVersionID = "Shamela0009783BK1";  // Tabari Tarikh
-  let OpenITIVersion = "2021.2.5"
-  main(dataBasePath, OpenITIVersion, mainVersionID);
+  let OpenITIVersion = "2022.2.7" //"2021.2.5"
+  //main(dataBasePath, OpenITIVersion, mainVersionID);
+  window.location.href = `/?id1=${mainVersionID}&v=${OpenITIVersion}`;
 }
 
 function loadTafsir(){
@@ -139,7 +151,8 @@ function loadTafsir(){
   // load new data:
   let mainVersionID = "Shamela0007798";  // Tabari Jāmiʿ Bayān
   let OpenITIVersion = "2022.2.7"
-  main(dataBasePath, OpenITIVersion, mainVersionID);
+  //main(dataBasePath, OpenITIVersion, mainVersionID);
+  window.location.href = `/?id1=${mainVersionID}&v=${OpenITIVersion}`;
 }
 
 function loadTahdhib(){
@@ -148,7 +161,8 @@ function loadTahdhib(){
   // load new data:
   let mainVersionID = "JK008250Vols";  // Tabari Tahdhīb
   let OpenITIVersion = "2022.2.7"
-  main(dataBasePath, OpenITIVersion, mainVersionID);
+  //main(dataBasePath, OpenITIVersion, mainVersionID);
+  window.location.href = `/?id1=${mainVersionID}&v=${OpenITIVersion}`;
 }
 
 function loadCSV(event){
